debug-files/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "15"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"oauth2-proxy-superchat","namespace":"development"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"oauth2-proxy-superchat"}},"template":{"metadata":{"labels":{"app":"oauth2-proxy-superchat"}},"spec":{"containers":[{"args":["--provider=google","--email-domain=*","--upstream=http://superchat-code.development.svc.cluster.local:8000","--http-address=0.0.0.0:4180","--cookie-secure=true","--cookie-name=_oauth [...]
  creationTimestamp: "2025-09-25T11:50:48Z"
  generation: 16
  name: oauth2-proxy-superchat
  namespace: development
  resourceVersion: "1199974"
  uid: d447aaaf-1e5b-460f-919a-0d3430b42e7f
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: oauth2-proxy-superchat
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-09-27T07:38:39+01:00"
      creationTimestamp: null
      labels:
        app: oauth2-proxy-superchat
    spec:
      containers:
      - args:
        - --provider=google
        - --email-domain=*
        - --upstream=http://superchat-code.development.svc.cluster.local:8000
        - --http-address=0.0.0.0:4180
        - --cookie-secure=true
        - --cookie-name=_oauth2_proxy_superchat
        - --cookie-domain=.mbo9.com
        - --whitelist-domain=.mbo9.com
        - --skip-provider-button=true
        - --pass-host-header=true
        - --set-xauthrequest=true
        - --pass-basic-auth=false
        - --pass-access-token=true
        - --pass-user-headers=true
        - --set-authorization-header=true
        - --skip-auth-regex=^/(user-management.*\.js|.*\.js|.*\.css|_next/static/.*)$
        - --custom-templates-dir=/templates
        - --footer=/templates/oauth2-custom-footer.html
        - --pass-host-header=true
        - --ssl-upstream-insecure-skip-verify=true
        env:
        - name: OAUTH2_PROXY_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: client-id
              name: google-oauth-secret
        - name: OAUTH2_PROXY_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: client-secret
              name: google-oauth-secret
        - name: OAUTH2_PROXY_COOKIE_SECRET
          valueFrom:
            secretKeyRef:
              key: cookie-secret
              name: google-oauth-secret
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.0
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /templates
          name: custom-templates
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: oauth2-custom-templates
        name: custom-templates
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-09-26T19:18:35Z"
    lastUpdateTime: "2025-09-26T19:18:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-25T11:50:48Z"
    lastUpdateTime: "2025-09-27T06:40:10Z"
    message: ReplicaSet "oauth2-proxy-superchat-64658b788d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 16
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
