debug-files/superchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"superchat-code"},"name":"superchat-code","namespace":"development"},"spec":{"ports":[{"name":"http","port":8000,"targetPort":8000}],"selector":{"app":"superchat-code"},"type":"ClusterIP"}}
  creationTimestamp: "2025-09-25T06:54:43Z"
  labels:
    app: superchat-code
  name: superchat-code
  namespace: development
  resourceVersion: "314774"
  uid: 5eecf87f-5b93-4f5f-b40b-26dfa4f7b0e0
spec:
  clusterIP: 172.20.83.253
  clusterIPs:
  - 172.20.83.253
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: superchat-code
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
